--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "eslint": "^5.11.1",
     "prettier": "^1.15.3"
   }
 }
