--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "eslint": "^5.11.1",
+    "eslint-config-airbnb-base": "^13.1.0",
     "prettier": "^1.15.3"
   }
 }
