--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^5.11.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "prettier": "^1.15.3"
+    "prettier": "^1.15.3",
+    "prettier-eslint": "^8.8.2"
   }
 }
