--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/rxseven/playground-node-graphql#readme",
   "scripts": {},
+  "dependencies": {
+    "morgan": "^1.9.1"
+  },
   "devDependencies": {
     "eslint": "^5.11.1",
     "eslint-config-airbnb-base": "^13.1.0",
