--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "url": "https://github.com/rxseven/playground-node-graphql/issues"
   },
   "homepage": "https://github.com/rxseven/playground-node-graphql#readme",
-  "scripts": {},
+  "scripts": {
+    "lint": "eslint \"**/*.js\""
+  },
   "dependencies": {
     "morgan": "^1.9.1"
   },
