Add script for formatting code automatically

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/rxseven/playground-node-graphql#readme",
   "scripts": {
+    "format": "prettier-eslint --write \"**/*.{js,json}\"",
     "lint": "eslint \"**/*.js\"",
     "lint:fix": "eslint --fix \"**/*.js\""
   },
