--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint:fix": "eslint --fix \"**/*.js\""
   },
   "dependencies": {
+    "express": "^4.16.4",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
