--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
     "morgan": "^1.9.1"
   },
