--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint:fix": "eslint --fix \"**/*.js\""
   },
   "dependencies": {
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
