Add script for running server

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "format": "prettier-eslint --write \"**/*.{js,json}\"",
     "lint": "eslint \"**/*.js\"",
-    "lint:fix": "eslint --fix \"**/*.js\""
+    "lint:fix": "eslint --fix \"**/*.js\"",
+    "start": "node server.js"
   },
   "dependencies": {
     "dotenv": "^6.2.0",
