--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "start:watch": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
