--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
+    "json-server": "^0.14.2",
     "lodash": "^4.17.11",
     "morgan": "^1.9.1"
   },
